add: QuestionAPIを自動発行できる形に変更
